[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Png/other/campfire4.png" type="Texture" id=1]
[ext_resource path="res://Assets/Png/other/campfire2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Png/other/campfire3.png" type="Texture" id=3]
[ext_resource path="res://Assets/Png/other/campfire1.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Gameplay/FunctionalObjects/CampFire/CampFire.gd" type="Script" id=5]
[ext_resource path="res://Scenes/UI/CookPanel/CookPanel.tscn" type="PackedScene" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 34, 36 )

[node name="CampFire" type="StaticBody2D"]
input_pickable = true
collision_layer = 4
collision_mask = 2
script = ExtResource( 5 )

[node name="AnimatedCampFire" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
frame = 3
playing = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( -0.132433, 0 )
polygon = PoolVector2Array( -10.8676, 3, -17.872, 7.95799, -17.8676, 11, -9.86757, 16, 14.1324, 16, 19.1324, 11, 19.0768, 7.16339, 12.1324, 3 )

[node name="CookPanel" parent="." instance=ExtResource( 6 )]
visible = false
margin_left = 11.0
margin_top = -49.0
margin_right = 11.0
margin_bottom = -49.0
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2

[node name="DetectBox" type="Area2D" parent="."]
visible = false
collision_layer = 16384
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectBox"]
position = Vector2( 0, 4 )
shape = SubResource( 2 )

[connection signal="mouse_entered" from="." to="." method="_on_CampFire_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_CampFire_mouse_exited"]
[connection signal="body_entered" from="DetectBox" to="." method="_on_DetectBox_body_entered"]
[connection signal="body_exited" from="DetectBox" to="." method="_on_DetectBox_body_exited"]
